--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,5 @@
-PORT=3000
+PORT=14500
 DB_URL="mongodb://localhost/mven-bp"
+JWT_SECRET="mven-bp-fullstack-app"
+ENV="development"
+APP_NAME="MVEN-BP"
