--- a/backend/package.json
+++ b/backend/package.json
@@ -4,17 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node --icu-data-dir=node_modules/full-icu server.js",
+    "dev": "nodemon --icu-data-dir=node_modules/full-icu server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "joi": "^14.3.1",
+    "full-icu": "^1.3.1",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "mongoose": "^5.7.12",
     "mongoose-paginate-v2": "^1.3.52"
   },
