--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,21 +7,29 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@mdi/font": "^3.6.95",
-    "core-js": "^3.4.4",
-    "roboto-fontface": "*",
-    "vue": "^2.6.10",
-    "vue-router": "^3.1.3",
-    "vuetify": "^2.1.0"
+    "core-js": "^3.6.4",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
+    "register-service-worker": "^1.6.2",
+    "vue": "^2.6.11",
+    "vue-router": "^3.1.5",
+    "vue-toast-notification": "0.0.3",
+    "vuetify": "^2.2.11",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-router": "^4.1.0",
-    "@vue/cli-service": "^4.1.0",
+    "@vue/cli-plugin-babel": "~4.2.0",
+    "@vue/cli-plugin-pwa": "~4.2.0",
+    "@vue/cli-plugin-router": "~4.2.0",
+    "@vue/cli-plugin-vuex": "~4.2.0",
+    "@vue/cli-service": "~4.2.0",
+    "axios": "^0.18.0",
+    "node-sass": "^4.12.0",
     "sass": "^1.19.0",
-    "sass-loader": "^8.0.0",
-    "vue-cli-plugin-vuetify": "^2.0.3",
-    "vue-template-compiler": "^2.6.10",
+    "sass-loader": "^8.0.2",
+    "vue-cli-plugin-axios": "0.0.4",
+    "vue-cli-plugin-vuetify": "~2.0.5",
+    "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0"
   }
 }
